보안 및 안정화 작업

--- a/BlazorApp/wwwroot/index.html
+++ b/BlazorApp/wwwroot/index.html
@@ -7,7 +7,7 @@
     <!-- HTTPS 강제 사용을 위한 보안 헤더 -->
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
-    <title>동해렌즈(주) 영업관리</title>
+    <title>토카이렌즈 영업관리</title>
     <base href="/" />
     <!--<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />-->
     <link rel="stylesheet" href="css/app.css" />
